--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon.png" />
+    <link rel="icon" type="image/png" sizes="192x192" href="/favicon-192.png" />
+    <link rel="apple-touch-icon" href="/favicon-192.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The Green Agents - Deploy Your Agentic Workforce | AI Agent Army Management for SMEs</title>
     <meta name="description" content="Transform your SME with an army of bespoke AI agents. The Green Agents designs, deploys & manages complete agentic workforces powered by Co-Pilot Studio. Proven ROI in 14 days." />
