Comprehensive SEO and marketing update: new homepage, service pages, LinkedIn/email marketing content, updated navigation, and SEO meta tags

--- a/index.html
+++ b/index.html
@@ -7,23 +7,23 @@
     <link rel="icon" type="image/png" sizes="192x192" href="/favicon-192.png" />
     <link rel="apple-touch-icon" href="/favicon-192.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>The Green Agents - Deploy Your Agentic Workforce | AI Agent Army Management for SMEs</title>
-    <meta name="description" content="Transform your SME with an army of bespoke AI agents. The Green Agents designs, deploys & manages complete agentic workforces powered by Co-Pilot Studio. Proven ROI in 14 days." />
-    <meta name="keywords" content="agentic workforce, AI agents, business automation, Co-Pilot Studio, digital workforce, SME automation, AI consulting, Microsoft automation, business transformation, artificial intelligence" />
+    <title>AI Marketing Automation for UK SMEs | The Green Agents</title>
+    <meta name="description" content="Deploy AI-powered marketing agents for email automation, social media management, and customer service. Get 10+ hours back every week. Free consultation for UK SMEs." />
+    <meta name="keywords" content="AI marketing automation, email automation UK, LinkedIn automation, marketing automation for SMEs, AI business automation, automated email campaigns, social media automation, customer service automation, data analysis automation, AI agents for business" />
     <meta name="author" content="The Green Agents Ltd" />
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://thegreenagents.com/" />
-    <meta property="og:title" content="The Green Agents - Deploy Your Agentic Workforce" />
-    <meta property="og:description" content="Transform your SME with coordinated armies of AI agents. Enterprise-grade digital workforces that scale your business exponentially." />
+    <meta property="og:title" content="AI Marketing Automation for UK SMEs | The Green Agents" />
+    <meta property="og:description" content="Deploy AI-powered marketing agents for email automation, social media management, and customer service. Get 10+ hours back every week." />
     <meta property="og:image" content="https://thegreenagents.com/og-image.jpg" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://thegreenagents.com/" />
-    <meta property="twitter:title" content="The Green Agents - Deploy Your Agentic Workforce" />
-    <meta property="twitter:description" content="Transform your SME with coordinated armies of AI agents. Enterprise-grade digital workforces that scale your business exponentially." />
+    <meta property="twitter:title" content="AI Marketing Automation for UK SMEs | The Green Agents" />
+    <meta property="twitter:description" content="Deploy AI-powered marketing agents for email automation, social media management, and customer service. Get 10+ hours back every week." />
     <meta property="twitter:image" content="https://thegreenagents.com/og-image.jpg" />
 
     <!-- Structured Data -->
@@ -34,7 +34,7 @@
       "name": "The Green Agents Ltd",
       "url": "https://thegreenagents.com",
       "logo": "https://thegreenagents.com/logo.png",
-      "description": "The definitive authority in agentic workforce deployment for SMEs",
+      "description": "AI marketing automation for UK SMEs. Email automation, social media management, customer service, and data analysis agents.",
       "sameAs": [
         "https://linkedin.com/company/thegreenagents"
       ],
