Fix mobile viewport: prevent horizontal overflow, reduce logo size, add overflow-x hidden

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon.png" />
     <link rel="icon" type="image/png" sizes="192x192" href="/favicon-192.png" />
     <link rel="apple-touch-icon" href="/favicon-192.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes" />
     <title>AI Marketing Automation for UK SMEs | The Green Agents</title>
     <meta name="description" content="Deploy AI-powered marketing agents for email automation, social media management, and customer service. Get 10+ hours back every week. Free consultation for UK SMEs." />
     <meta name="keywords" content="AI marketing automation, email automation UK, LinkedIn automation, marketing automation for SMEs, AI business automation, automated email campaigns, social media automation, customer service automation, data analysis automation, AI agents for business" />
